--- a/.env
+++ b/.env
@@ -9,13 +9,13 @@ JWT_SECRET="7edsd4sd3asd548ed3s2d1asd15e456sdad"
 JWT_EXPIRY="7d"
 SECRET="464561211546547"
 KEY="djasgdasghj465464"
-DB_NAME="u544215939_club_db"
-DB_USER="u544215939_club_db"
-DB_PASS="Gw/@5C1:1$3"
-DB_HOST="217.21.91.103"
+# DB_NAME="u544215939_club_db"
+# DB_USER="u544215939_club_db"
+# DB_PASS="Gw/@5C1:1$3"
+# DB_HOST="217.21.91.103"
 
-# DB_NAME="club_booking"
-# DB_USER="root"
-# DB_PASS=""
-# DB_HOST="localhost"
-# DB_URL="https://auth-db830.hstgr.io/index.php?db=u544215939_club_db"
+DB_NAME="club_booking"
+DB_USER="root"
+DB_PASS=""
+DB_HOST="localhost"
+DB_URL="https://auth-db830.hstgr.io/index.php?db=u544215939_club_db"
