--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.1",
     "glob": "7.1.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^5.9.10",
     "mongoose-autopopulate": "^0.14.0",
     "mysql2": "^3.6.1",
