--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.4",
     "mongoose": "^5.9.10",
     "mongoose-autopopulate": "^0.14.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   },
